[package]
name = "hello-quinnet"
version = "0.1.0"
edition = "2021"
authors = ["Kneelawk <kneelawk@gmail.com>"]
description = "Simple client/server program built on Bevy and Quinn to mess around with networking code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_quinnet = "0.3.0"
bevy_rapier2d = { version = "0.20.0", features = ["parallel", "simd-nightly"] }
clap = { version = "4.1.6", features = ["derive"] }
ctrlc = "3.2.5"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
