[package]
name = "hello-quinnet"
version = "0.1.0"
edition = "2021"
authors = ["Kneelawk <kneelawk@gmail.com>"]
description = "Simple client/server program built on Bevy and Quinn to mess around with networking code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = []
default = ["client"]

[dependencies]
bevy = { version = "0.14.0", features = ["wayland"] }
bevy_quinnet = "0.9.0"
bevy_rapier2d = { version = "0.27.0", features = ["parallel", "simd-nightly"] }
clap = { version = "4.5.9", features = ["derive"] }
ctrlc = "3.4.4"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
tracing = "0.1.40"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
