[package]
name = "hello-quinnet"
version = "0.1.0"
edition = "2024"
authors = ["Kneelawk <kneelawk@gmail.com>"]
description = "Simple client/server program built on Bevy and Quinn to mess around with networking code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = []
default = ["client"]

[dependencies]
bevy = { version = "0.16.0", features = ["wayland"] }
bevy_quinnet = "0.17.0"
bevy_rapier2d = { version = "0.29.0", features = ["parallel", "simd-nightly"] }
clap = { version = "4.5.37", features = ["derive"] }
ctrlc = "3.4.6"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
